# Apex-Omega-v6

./: .env  .env.bak_all_pools_20260501_000428  .env.bak_discovery_universe_20260501_124401  .env.bak_finish_protocols_20260501_133323  .env.bak_latency_fix_20260501_135813  .env.bak_low_latency_20260430_232623  .env.bak_onchain_v2_20260430_231037  .env.example  .gitignore  .replit  APEX_CANON_FLOW_PATCH.md  APEX_FIX_CURRENT_TEST_FAILURES.ps1  APEX_FULL_DRYRUN_DNA_DASHBOARD_PATCH.ps1  APEX_FULL_DRYRUN_DNA_DASHBOARD_PROMPT.md  APEX_PATCH_DRY_RUN_CANONICAL_SPREAD.ps1  APEX_PATCH_EXECUTION_SAFETY.ps1  APEX_REQUIRED_FIX_PATCH.md  APEX_RUNTIME_WIRING.ps1  APEX_V3_GATES_FORK_FIX.md  BUILD_COORDINATION.md  Cargo.toml  LIVE_DATA_INTEGRITY.md  README.md  __init__.py  add_dex_router_registry.py  app.py  audit_all_pools.py  audit_tokens_3plus_venues.py  boot_apex_all.ps1  boot_with_latency_monitor.ps1  bootstrap_empty_discovery_universe.py  disable_dexscreener_default.py  disable_parallel_tvl_monitor.py  dry_run.py  dry_run_results.csv  finish_today_protocol_patch.py  fix_01_utf8_logging.ps1  fix_02_run_utf8_bot.ps1  fix_03_scanner_none_guard.ps1  fix_04_ascii_logs.ps1  (+34 more)
.github/: copilot-instructions.md  copilot-setup-steps.yml
attached_assets/: Pasted-import-time-import-logging-import-requests-from-web3-im_1776869272705.txt
backend/: __init__.py  contract_interface.py  execution_payload_builder.py  executor_registry.py  institutional_executor.py  liquidation_executor_contract.py  live_executor.py  protocol_adapters.py  server.py
contracts/: InstitutionalExecutor.sol
core/: inference.py  slippage_sentinel.py  spread_alignment.py  types.py
docs/: .env  FLASHLOAN_SIZING_RULE.md  build-artifacts.md  (+5 more)
rust/ssot_pipeline/: Cargo.toml
rust/ssot_pipeline/src/: audit.rs  batch.rs  degradation.rs  executor_boundary.rs  finalizer.rs  lib.rs  math_core.rs  types.rs
(+353 files in other folders)
