[package]
name = "apex-omega-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "apex_omega_core_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"