[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "apex-omega-core"
version = "0.1.0"
description = "High-performance Rust extensions for Apex-Omega-v6 arbitrage system"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "pytest",
    "pytest-asyncio",
    "web3>=6.0.0",
    "eth-abi",
    "requests",
    "redis>=5.0.0",
]

[tool.maturin]
# python-source = "python"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: marks tests that require a live Polygon RPC connection (deselect with -m 'not live')",
]
